Fix width spacing for subtitle

--- a/src/styles/components/_landing.scss
+++ b/src/styles/components/_landing.scss
@@ -75,6 +75,7 @@
     }
   }
   .desktoph {
+    width:120%!important;
     @media (max-width: 450px) {
       display: none
     }
